# CliniqAI

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/routes/: analytics.py  calls.py  escalations.py  notifications.py  tasks.py  transcripts.py
backend/app/core/: config.py  twiml.py
backend/app/models/: __init__.py  call.py  escalation.py  notification.py  task.py  transcript.py
backend/app/schemas/: __init__.py  call.py  escalation.py  notification.py  task.py  transcript.py
backend/app/services/: context.py  deepgram_stream.py  intent.py  llm.py  notification_store.py  notifications.py  state_machine.py  tts.py
backend/dev_tools/simulator/: fake_call.py  live_call.py
backend/tests/: make_call.py
docs/: product.md  what-is-done.md
frontend/: README.md  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: SignInForm.tsx  SignUpForm.tsx
frontend/src/components/header/: NotificationDropdown.tsx  UserDropdown.tsx
frontend/src/context/: AuthContext.tsx  SearchContext.tsx
frontend/src/layout/: AppHeader.tsx  AppSidebar.tsx
frontend/src/pages/AuthPages/: AuthPageLayout.tsx  SignIn.tsx  SignUp.tsx
frontend/src/pages/Dashboard/: OperationsDashboard.tsx
frontend/src/pages/Simulate/: SimulatePage.tsx
frontend/src/services/: opsApi.ts  simulateApi.ts
frontend/src/types/: ops.ts
